Added zipped html file, IAM role

--- a/infra.yml
+++ b/infra.yml
@@ -233,8 +233,8 @@ Resources:
                   -   s3:Get*
                   -   s3:List*
                   Resource: 
-                  -   arn:aws:s3:::udacity-demo-1
-                  -   arn:aws:s3:::udacity-demo-1/*
+                  -   arn:aws:s3:::ias-udagram-project
+                  -   arn:aws:s3:::ias-udagram-project/*
           Roles:
           -   Ref: UdacityS3ReadOnlyEC2
 
@@ -292,7 +292,7 @@ Resources:
           apt-get install apache2 -y
           systemctl start apache2.service
           cd /var/www/html
-          aws s3 cp s3://udacity-demo-1/udacity.zip .
+          aws s3 cp s3://ias-udagram-project/udacity.zip .
           unzip -o udacity.zip
       ImageId: ami-0e80a462ede03e653
       IamInstanceProfile: !Ref ProfileWithRolesForOurApp
