--- a/infra.yml
+++ b/infra.yml
@@ -16,6 +16,8 @@ Description: >
       * Web app autoscaling group
       * Load Balancer, ELB Listener, Listener rule, ELB Target group
 
+# We use tags to know what project do our resources correspond to.
+
 Parameters:
 
   EnvironmentName:
@@ -377,60 +379,6 @@ Outputs:
         Value: !Ref VPC
         Export:
           Name: !Sub ${EnvironmentName}-VPCID
-
-    VPCPublicRouteTable:
-        Description: Public Routing
-        Value: !Ref PublicRouteTable
-        Export:
-          Name: !Sub ${EnvironmentName}-PUB-RT
-
-    VPCPrivateRouteTable1:
-        Description: Private Routing AZ1
-        Value: !Ref PrivateRouteTable1
-        Export:
-          Name: !Sub ${EnvironmentName}-PRI1-RT
-
-    VPCPrivateRouteTable2:
-        Description: Private Routing AZ2
-        Value: !Ref PrivateRouteTable2
-        Export:
-          Name: !Sub ${EnvironmentName}-PRI2-RT
-
-    PublicSubnets:
-        Description: A list of the public subnets
-        Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
-        Export:
-          Name: !Sub ${EnvironmentName}-PUB-NETS
-
-    PrivateSubnets:
-        Description: A list of the private subnets
-        Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
-        Export:
-          Name: !Sub ${EnvironmentName}-PRIV-NETS
-
-    PublicSubnet1:
-        Description: A reference to the public subnet in the 1st Availability Zone
-        Value: !Ref PublicSubnet1
-        Export:
-          Name: !Sub ${EnvironmentName}-PUB1-SN
-
-    PublicSubnet2: 
-        Description: A reference to the public subnet in the 2nd Availability Zone
-        Value: !Ref PublicSubnet2
-        Export:
-          Name: !Sub ${EnvironmentName}-PUB2-SN
-
-    PrivateSubnet1:
-        Description: A reference to the private subnet in the 1st Availability Zone
-        Value: !Ref PrivateSubnet1
-        Export:
-          Name: !Sub ${EnvironmentName}-PRI1-SN
-
-    PrivateSubnet2: 
-        Description: A reference to the private subnet in the 2nd Availability Zone
-        Value: !Ref PrivateSubnet2
-        Export:
-          Name: !Sub ${EnvironmentName}-PRI2-SN
 
     WebAppLoadBalancerDNSName:
         Description: DNS name or Public URL of the Load Balancer
